@@ -15,6 +15,8 @@ with the --qt-opengl=desktop command line argument.)
 - Fix TypeError when activating cards (patch by Adam Smalhofer). 
 - Make sure the review server also works for non-latin audio files
   (reported by jooseef).
+- Fix corner case when previewing cards after changing their card type 
+  (reported by Gnome).
 
 Mnemosyne 2.9 : 2022-06-20
 
